<resources>
    <string name="app_name">Contact</string>
    <string name="naam">Naam</string>
    <string name="e_mail">E-mail</string>
    <string name="onderwerp">Onderwerp</string>
    <string name="uw_bericht">Uw bericht</string>
    <string name="verzenden">Verzenden</string>
    <string name="your_message_has_been_succesfully_sent">Your message has been succesfully sent</string>
</resources>
